# python-learning

./: .gitignore  README.md  readme.md
chatbot-rag/: api.py  app.py  chatbot.py  pyproject.toml  readme.md  requirements.in  requirements.txt  toturial-v1.md  toturial-v2.md  toturial.md
fundementals/: course1.md  exercice_1.py
